--- a/charts/cluster-config/values-mg.yaml
+++ b/charts/cluster-config/values-mg.yaml
@@ -21,7 +21,8 @@ autoscaling:
 clusterversion:
   enabled: false
   channel: fast
-  version: "4.12"
+  version: "4.13"
+  desiredVersion: 4.13.26
 alertmanager:
   enabled: false
   receiverName: PagerDutyStartx
