--- a/charts/operator/values-tekton-1.13.0.yaml
+++ b/charts/operator/values-tekton-1.13.0.yaml
@@ -14,7 +14,7 @@ subscription:
   namespace: "openshift-operators"
   version: "v1.13.0"
   operator: 
-    channel: latest
+    channel: pipelines-1.13
     name: openshift-pipelines-operator-rh
     installPlanApproval: Automatic
     # csv: openshift-pipelines-operator
