--- a/charts/cluster-3scale/Chart.yaml
+++ b/charts/cluster-3scale/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 14.6.1
 # Version of 3scale operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 0.10.7
+appVersion: "0.10.7"
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-3scale.svg
 # category associated to this package
