--- a/charts/cluster-argocd/Chart.yaml
+++ b/charts/cluster-argocd/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 14.6.1
 # Version name of the CRW operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 1.5.6
+appVersion: "1.5.6"
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-argocd.svg
 # category associated to this package
