--- a/charts/cluster-crunchy/Chart.yaml
+++ b/charts/cluster-crunchy/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 14.6.1
 # Version name of the crunchy operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 5.5.0
+appVersion: "5.5.0"
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-crunchy.svg
 # category associated to this package
