--- a/charts/cluster-storage-efs/Chart.yaml
+++ b/charts/cluster-storage-efs/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 14.6.1
 # Version name of the AWS EFS operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 0.0.8
+appVersion: "0.0.8"
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-storage-efs.svg
 # category associated to this package
