--- a/charts/cluster-config/Chart.yaml
+++ b/charts/cluster-config/Chart.yaml
@@ -79,7 +79,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade minimum kubeVersion to 1.27.x minimum"
-    - kind: changed
-      description: "upgrade dependencies to version 14.6.5 for startx packages"
-  artifacthub.io/containsSecurityUpdates: "false"
+      description: "upgrade ServiceMesh operator to version 5.8.0"
+  artifacthub.io/containsSecurityUpdates: "true"
