--- a/charts/cluster-jenkins/Chart.yaml
+++ b/charts/cluster-jenkins/Chart.yaml
@@ -58,7 +58,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
     - kind: changed
-      description: "upgrade minimum kubeVersion to 1.27.x minimum"
-    - kind: changed
-      description: "upgrade dependencies to version 14.6.5 for startx packages"
+      description: "Blank release in order to be aligned to all startx charts"
   artifacthub.io/containsSecurityUpdates: "false"
