--- a/charts/cluster-localstorage/Chart.yaml
+++ b/charts/cluster-localstorage/Chart.yaml
@@ -56,7 +56,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade minimum kubeVersion to 1.27.x minimum"
-    - kind: changed
-      description: "upgrade dependencies to version 14.6.5 for startx packages"
-  artifacthub.io/containsSecurityUpdates: "false"
+      description: "upgrade LocalStorage operator to version 4.14.0-202311211133"
+  artifacthub.io/containsSecurityUpdates: "true"
