--- a/charts/cluster-workspace/Chart.yaml
+++ b/charts/cluster-workspace/Chart.yaml
@@ -8,7 +8,7 @@ type: application
 # Version of this helm chart (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release guidelines)
 version: 14.6.11
 # Version name of the CRW operator (see https://github.com/startxfr/helm-repository/blob/dev/README.md for helm chart release history)
-appVersion: 3.7.2
+appVersion: 3.10.0
 # Icon of this helm-chart
 icon: https://helm-repository.readthedocs.io/en/latest/img/cluster-workspace.svg
 # category associated to this package
@@ -54,7 +54,5 @@ dependencies:
 annotations:
   artifacthub.io/changes: |
     - kind: changed
-      description: "upgrade minimum kubeVersion to 1.27.x minimum"
-    - kind: changed
-      description: "upgrade dependencies to version 14.6.5 for startx packages"
-  artifacthub.io/containsSecurityUpdates: "false"
+      description: "upgrade DevWorkspace operator to version 3.10.0"
+  artifacthub.io/containsSecurityUpdates: "true"
